# agent-board

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
agent_board/: __init__.py  _sqlite.py  admin.py  app.py  clone.py  config.py  instances.py  keepalive.py  live_events.py  models.py  models_registry.py  orchestrator.py  router.py  sessions.py  store.py
agent_board/static/: admin.html  admin.js  app.js  index.html  style.css
deploy/: Caddyfile  Caddyfile.lan  agent-board.service
docs/: DESIGN.md  REQUIREMENTS.md
scripts/: repro_slow_open.py
tests/: conftest.py  test_admin.py  test_app.py  test_caddy_router.py  test_clone.py  test_instance_stop.py  test_instances.py  test_keepalive.py  test_live_events.py  test_log_config.py  test_models_registry.py  test_orchestrator.py  test_packaging.py  test_port.py  test_restore.py  test_router.py  test_router_parity.py  test_sessions.py  test_sqlite_shim.py  test_store.py
tests/browser/: conftest.py  test_clone.py  test_dashboard.py
