[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-board"
version = "1.1.1"
description = "Forum-style board over agent-cli — each post is an agent-cli session + workspace"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff"]

[project.scripts]
agent-board = "agent_board.app:main"

[tool.setuptools.packages.find]
include = ["agent_board*"]

[tool.setuptools.package-data]
agent_board = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
