[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-board"
version = "1.15.0"
description = "Forum-style board over agent-cli — each post is an agent-cli session + workspace"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    # SQLite fallback for Python builds without the stdlib ``sqlite3`` extension
    # (locked-down servers). The ``agent_board._sqlite`` shim prefers stdlib
    # sqlite3 and uses this only when absent. Wheel exists for x86_64 Linux;
    # other platforms ship sqlite3 in their stdlib (macOS/conda/system Python).
    "pysqlite3-binary>=0.5; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff"]

[project.scripts]
agent-board = "agent_board.app:main"

[tool.setuptools.packages.find]
include = ["agent_board*"]

[tool.setuptools.package-data]
# 최상위("static/*") + 재귀("static/**/*") 둘 다 — 재귀 글롭만으로는
# 최상위 파일이 fnmatch 가드에서 빠지고, 비재귀만으로는 하위 디렉토리
# (fonts/ 등)를 놓친다 (agent-cli woff2 누락 사고와 동일 클래스).
agent_board = ["static/*", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
